isBlank is JDK11 feature, revert to old fashioned check